src/PythonParser.py
# $ANTLR 3.5 C:\\Users\\Jangedoo\\Documents\\eclipseworkspace\\XperimentLang\\src\\Python.g 2014-03-19 10:24:29

import sys
from antlr3 import *
from antlr3.compat import set, frozenset

from antlr3.tree import *




# for convenience in actions
HIDDEN = BaseRecognizer.HIDDEN

# token types
EOF=-1
T__16=16
T__17=17
T__18=18
T__19=19
T__20=20
T__21=21
T__22=22
T__23=23
T__24=24
T__25=25
T__26=26
T__27=27
T__28=28
T__29=29
T__30=30
T__31=31
T__32=32
T__33=33
T__34=34
T__35=35
T__36=36
T__37=37
T__38=38
T__39=39
Comment=4
DEDENT=5
EOL=6
EXP=7
ID=8
INDENT=9
INT=10
NUMBER=11
STATEMENTS=12
STRING=13
Skip=14
Spaces=15

# token names
tokenNames = [
    "<invalid>", "<EOR>", "<DOWN>", "<UP>",
    "Comment", "DEDENT", "EOL", "EXP", "ID", "INDENT", "INT", "NUMBER", 
    "STATEMENTS", "STRING", "Skip", "Spaces", "'!='", "'%'", "'('", "')'", 
    "'*'", "'+'", "'-'", "'/'", "':'", "'<'", "'<='", "'='", "'=='", "'>'", 
    "'>='", "'and'", "'contains'", "'elif'", "'else'", "'for'", "'if'", 
    "'in'", "'or'", "'while'"
]




class PythonParser(Parser):
    grammarFileName = "C:\\Users\\Jangedoo\\Documents\\eclipseworkspace\\XperimentLang\\src\\Python.g"
    api_version = 1
    tokenNames = tokenNames

    def __init__(self, input, state=None, *args, **kwargs):
        if state is None:
            state = RecognizerSharedState()

        super(PythonParser, self).__init__(input, state, *args, **kwargs)




        self.delegates = []

	self._adaptor = None
	self.adaptor = CommonTreeAdaptor()



    def getTreeAdaptor(self):
        return self._adaptor

    def setTreeAdaptor(self, adaptor):
        self._adaptor = adaptor

    adaptor = property(getTreeAdaptor, setTreeAdaptor)


    class prog_return(ParserRuleReturnScope):
        def __init__(self):
            super(PythonParser.prog_return, self).__init__()

            self.tree = None





    # $ANTLR start "prog"
    # C:\\Users\\Jangedoo\\Documents\\eclipseworkspace\\XperimentLang\\src\\Python.g:54:1: prog : ( EOL )* block ;
    def prog(self, ):
        retval = self.prog_return()
        retval.start = self.input.LT(1)


        root_0 = None

        EOL1 = None
        block2 = None

        EOL1_tree = None

        try:
            try:
                # C:\\Users\\Jangedoo\\Documents\\eclipseworkspace\\XperimentLang\\src\\Python.g:54:7: ( ( EOL )* block )
                # C:\\Users\\Jangedoo\\Documents\\eclipseworkspace\\XperimentLang\\src\\Python.g:54:9: ( EOL )* block
                pass 
                root_0 = self._adaptor.nil()


                # C:\\Users\\Jangedoo\\Documents\\eclipseworkspace\\XperimentLang\\src\\Python.g:54:9: ( EOL )*
                while True: #loop1
                    alt1 = 2
                    LA1_0 = self.input.LA(1)

                    if (LA1_0 == EOL) :
                        alt1 = 1


                    if alt1 == 1:
                        # C:\\Users\\Jangedoo\\Documents\\eclipseworkspace\\XperimentLang\\src\\Python.g:54:9: EOL
                        pass 
                        EOL1 = self.match(self.input, EOL, self.FOLLOW_EOL_in_prog203)
                        EOL1_tree = self._adaptor.createWithPayload(EOL1)
                        self._adaptor.addChild(root_0, EOL1_tree)




                    else:
                        break #loop1


                self._state.following.append(self.FOLLOW_block_in_prog206)
                block2 = self.block()

                self._state.following.pop()
                self._adaptor.addChild(root_0, block2.tree)




                retval.stop = self.input.LT(-1)


                retval.tree = self._adaptor.rulePostProcessing(root_0)
                self._adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop)



            except RecognitionException, re:
                self.reportError(re)
                self.recover(self.input, re)
                retval.tree = self._adaptor.errorNode(self.input, retval.start, self.input.LT(-1), re)

        finally:
            pass
        return retval

    # $ANTLR end "prog"


    class block_return(ParserRuleReturnScope):
        def __init__(self):
            super(PythonParser.block_return, self).__init__()

            self.tree = None





    # $ANTLR start "block"
    # C:\\Users\\Jangedoo\\Documents\\eclipseworkspace\\XperimentLang\\src\\Python.g:56:1: block : ( stat )* -> ^( STATEMENTS ( stat )+ ) ;
    def block(self, ):
        retval = self.block_return()
        retval.start = self.input.LT(1)


        root_0 = None

        stat3 = None

        stream_stat = RewriteRuleSubtreeStream(self._adaptor, "rule stat")
        try:
            try:
                # C:\\Users\\Jangedoo\\Documents\\eclipseworkspace\\XperimentLang\\src\\Python.g:56:7: ( ( stat )* -> ^( STATEMENTS ( stat )+ ) )
                # C:\\Users\\Jangedoo\\Documents\\eclipseworkspace\\XperimentLang\\src\\Python.g:56:9: ( stat )*
                pass 
                # C:\\Users\\Jangedoo\\Documents\\eclipseworkspace\\XperimentLang\\src\\Python.g:56:9: ( stat )*
                while True: #loop2
                    alt2 = 2
                    LA2_0 = self.input.LA(1)

                    if (LA2_0 == ID or (INT <= LA2_0 <= NUMBER) or LA2_0 == STRING or LA2_0 == 18 or (35 <= LA2_0 <= 36) or LA2_0 == 39) :
                        alt2 = 1


                    if alt2 == 1:
                        # C:\\Users\\Jangedoo\\Documents\\eclipseworkspace\\XperimentLang\\src\\Python.g:56:9: stat
                        pass 
                        self._state.following.append(self.FOLLOW_stat_in_block214)
                        stat3 = self.stat()

                        self._state.following.pop()
                        stream_stat.add(stat3.tree)



                    else:
                        break #loop2


                # AST Rewrite
                # elements: stat
                # token labels: 
                # rule labels: retval
                # token list labels: 
                # rule list labels: 
                # wildcard labels: 
                retval.tree = root_0
                if retval is not None:
                    stream_retval = RewriteRuleSubtreeStream(self._adaptor, "rule retval", retval.tree)
                else:
                    stream_retval = RewriteRuleSubtreeStream(self._adaptor, "token retval", None)


                root_0 = self._adaptor.nil()
                # 56:15: -> ^( STATEMENTS ( stat )+ )
                # C:\\Users\\Jangedoo\\Documents\\eclipseworkspace\\XperimentLang\\src\\Python.g:56:18: ^( STATEMENTS ( stat )+ )
                root_1 = self._adaptor.nil()
                root_1 = self._adaptor.becomeRoot(
                self._adaptor.createFromType(STATEMENTS, "STATEMENTS")
                , root_1)

                # C:\\Users\\Jangedoo\\Documents\\eclipseworkspace\\XperimentLang\\src\\Python.g:56:31: ( stat )+
                if not (stream_stat.hasNext()):
                    raise RewriteEarlyExitException()

                while stream_stat.hasNext():
                    self._adaptor.addChild(root_1, stream_stat.nextTree())


                stream_stat.reset()

                self._adaptor.addChild(root_0, root_1)




                retval.tree = root_0





                retval.stop = self.input.LT(-1)


                retval.tree = self._adaptor.rulePostProcessing(root_0)
                self._adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop)



            except RecognitionException, re:
                self.reportError(re)
                self.recover(self.input, re)
                retval.tree = self._adaptor.errorNode(self.input, retval.start, self.input.LT(-1), re)

        finally:
            pass
        return retval

    # $ANTLR end "block"


    class stat_return(ParserRuleReturnScope):
        def __init__(self):
            super(PythonParser.stat_return, self).__init__()

            self.tree = None





    # $ANTLR start "stat"
    # C:\\Users\\Jangedoo\\Documents\\eclipseworkspace\\XperimentLang\\src\\Python.g:59:1: stat : ( expr EOL | ID '=' expr EOL | for_stmt | if_stmt | while_stmt );
    def stat(self, ):
        retval = self.stat_return()
        retval.start = self.input.LT(1)


        root_0 = None

        EOL5 = None
        ID6 = None
        char_literal7 = None
        EOL9 = None
        expr4 = None
        expr8 = None
        for_stmt10 = None
        if_stmt11 = None
        while_stmt12 = None

        EOL5_tree = None
        ID6_tree = None
        char_literal7_tree = None
        EOL9_tree = None

        try:
            try:
                # C:\\Users\\Jangedoo\\Documents\\eclipseworkspace\\XperimentLang\\src\\Python.g:59:7: ( expr EOL | ID '=' expr EOL | for_stmt | if_stmt | while_stmt )
                alt3 = 5
                LA3 = self.input.LA(1)
                if LA3 == INT or LA3 == NUMBER or LA3 == STRING or LA3 == 18:
                    alt3 = 1
                elif LA3 == ID:
                    LA3_2 = self.input.LA(2)

                    if (LA3_2 == 27) :
                        alt3 = 2
                    elif (LA3_2 == EOL or (16 <= LA3_2 <= 17) or (20 <= LA3_2 <= 23) or (25 <= LA3_2 <= 26) or (28 <= LA3_2 <= 32) or LA3_2 == 38) :
                        alt3 = 1
                    else:
                        nvae = NoViableAltException("", 3, 2, self.input)

                        raise nvae


                elif LA3 == 35:
                    alt3 = 3
                elif LA3 == 36:
                    alt3 = 4
                elif LA3 == 39:
                    alt3 = 5
                else:
                    nvae = NoViableAltException("", 3, 0, self.input)

                    raise nvae


                if alt3 == 1:
                    # C:\\Users\\Jangedoo\\Documents\\eclipseworkspace\\XperimentLang\\src\\Python.g:59:9: expr EOL
                    pass 
                    root_0 = self._adaptor.nil()


                    self._state.following.append(self.FOLLOW_expr_in_stat238)
                    expr4 = self.expr()

                    self._state.following.pop()
                    self._adaptor.addChild(root_0, expr4.tree)


                    EOL5 = self.match(self.input, EOL, self.FOLLOW_EOL_in_stat240)
                    EOL5_tree = self._adaptor.createWithPayload(EOL5)
                    self._adaptor.addChild(root_0, EOL5_tree)




                elif alt3 == 2:
                    # C:\\Users\\Jangedoo\\Documents\\eclipseworkspace\\XperimentLang\\src\\Python.g:60:5: ID '=' expr EOL
                    pass 
                    root_0 = self._adaptor.nil()


                    ID6 = self.match(self.input, ID, self.FOLLOW_ID_in_stat246)
                    ID6_tree = self._adaptor.createWithPayload(ID6)
                    self._adaptor.addChild(root_0, ID6_tree)



                    char_literal7 = self.match(self.input, 27, self.FOLLOW_27_in_stat248)
                    char_literal7_tree = self._adaptor.createWithPayload(char_literal7)
                    self._adaptor.addChild(root_0, char_literal7_tree)



                    self._state.following.append(self.FOLLOW_expr_in_stat250)
                    expr8 = self.expr()

                    self._state.following.pop()
                    self._adaptor.addChild(root_0, expr8.tree)


                    EOL9 = self.match(self.input, EOL, self.FOLLOW_EOL_in_stat253)
                    EOL9_tree = self._adaptor.createWithPayload(EOL9)
                    self._adaptor.addChild(root_0, EOL9_tree)




                elif alt3 == 3:
                    # C:\\Users\\Jangedoo\\Documents\\eclipseworkspace\\XperimentLang\\src\\Python.g:61:5: for_stmt
                    pass 
                    root_0 = self._adaptor.nil()


                    self._state.following.append(self.FOLLOW_for_stmt_in_stat259)
                    for_stmt10 = self.for_stmt()

                    self._state.following.pop()
                    self._adaptor.addChild(root_0, for_stmt10.tree)



                elif alt3 == 4:
                    # C:\\Users\\Jangedoo\\Documents\\eclipseworkspace\\XperimentLang\\src\\Python.g:62:5: if_stmt
                    pass 
                    root_0 = self._adaptor.nil()


                    self._state.following.append(self.FOLLOW_if_stmt_in_stat266)
                    if_stmt11 = self.if_stmt()

                    self._state.following.pop()
                    self._adaptor.addChild(root_0, if_stmt11.tree)



                elif alt3 == 5:
                    # C:\\Users\\Jangedoo\\Documents\\eclipseworkspace\\XperimentLang\\src\\Python.g:63:5: while_stmt
                    pass 
                    root_0 = self._adaptor.nil()


                    self._state.following.append(self.FOLLOW_while_stmt_in_stat273)
                    while_stmt12 = self.while_stmt()

                    self._state.following.pop()
                    self._adaptor.addChild(root_0, while_stmt12.tree)



                retval.stop = self.input.LT(-1)


                retval.tree = self._adaptor.rulePostProcessing(root_0)
                self._adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop)



            except RecognitionException, re:
                self.reportError(re)
                self.recover(self.input, re)
                retval.tree = self._adaptor.errorNode(self.input, retval.start, self.input.LT(-1), re)

        finally:
            pass
        return retval

    # $ANTLR end "stat"


    class for_stmt_return(ParserRuleReturnScope):
        def __init__(self):
            super(PythonParser.for_stmt_return, self).__init__()

            self.tree = None





    # $ANTLR start "for_stmt"
    # C:\\Users\\Jangedoo\\Documents\\eclipseworkspace\\XperimentLang\\src\\Python.g:67:1: for_stmt : 'for' item= ID 'in' items= expr ':' EOL INDENT actions= block DEDENT ( EOL )* ;
    def for_stmt(self, ):
        retval = self.for_stmt_return()
        retval.start = self.input.LT(1)


        root_0 = None

        item = None
        string_literal13 = None
        string_literal14 = None
        char_literal15 = None
        EOL16 = None
        INDENT17 = None
        DEDENT18 = None
        EOL19 = None
        items = None
        actions = None

        item_tree = None
        string_literal13_tree = None
        string_literal14_tree = None
        char_literal15_tree = None
        EOL16_tree = None
        INDENT17_tree = None
        DEDENT18_tree = None
        EOL19_tree = None

        try:
            try:
                # C:\\Users\\Jangedoo\\Documents\\eclipseworkspace\\XperimentLang\\src\\Python.g:67:11: ( 'for' item= ID 'in' items= expr ':' EOL INDENT actions= block DEDENT ( EOL )* )
                # C:\\Users\\Jangedoo\\Documents\\eclipseworkspace\\XperimentLang\\src\\Python.g:67:13: 'for' item= ID 'in' items= expr ':' EOL INDENT actions= block DEDENT ( EOL )*
                pass 
                root_0 = self._adaptor.nil()


                string_literal13 = self.match(self.input, 35, self.FOLLOW_35_in_for_stmt287)
                string_literal13_tree = self._adaptor.createWithPayload(string_literal13)
                self._adaptor.addChild(root_0, string_literal13_tree)



                item = self.match(self.input, ID, self.FOLLOW_ID_in_for_stmt291)
                item_tree = self._adaptor.createWithPayload(item)
                self._adaptor.addChild(root_0, item_tree)



                string_literal14 = self.match(self.input, 37, self.FOLLOW_37_in_for_stmt293)
                string_literal14_tree = self._adaptor.createWithPayload(string_literal14)
                self._adaptor.addChild(root_0, string_literal14_tree)



                self._state.following.append(self.FOLLOW_expr_in_for_stmt297)
                items = self.expr()

                self._state.following.pop()
                self._adaptor.addChild(root_0, items.tree)


                char_literal15 = self.match(self.input, 24, self.FOLLOW_24_in_for_stmt299)
                char_literal15_tree = self._adaptor.createWithPayload(char_literal15)
                self._adaptor.addChild(root_0, char_literal15_tree)



                EOL16 = self.match(self.input, EOL, self.FOLLOW_EOL_in_for_stmt301)
                EOL16_tree = self._adaptor.createWithPayload(EOL16)
                self._adaptor.addChild(root_0, EOL16_tree)



                INDENT17 = self.match(self.input, INDENT, self.FOLLOW_INDENT_in_for_stmt303)
                INDENT17_tree = self._adaptor.createWithPayload(INDENT17)
                self._adaptor.addChild(root_0, INDENT17_tree)



                self._state.following.append(self.FOLLOW_block_in_for_stmt307)
                actions = self.block()

                self._state.following.pop()
                self._adaptor.addChild(root_0, actions.tree)


                DEDENT18 = self.match(self.input, DEDENT, self.FOLLOW_DEDENT_in_for_stmt309)
                DEDENT18_tree = self._adaptor.createWithPayload(DEDENT18)
                self._adaptor.addChild(root_0, DEDENT18_tree)



                # C:\\Users\\Jangedoo\\Documents\\eclipseworkspace\\XperimentLang\\src\\Python.g:67:79: ( EOL )*
                while True: #loop4
                    alt4 = 2
                    LA4_0 = self.input.LA(1)

                    if (LA4_0 == EOL) :
                        alt4 = 1


                    if alt4 == 1:
                        # C:\\Users\\Jangedoo\\Documents\\eclipseworkspace\\XperimentLang\\src\\Python.g:67:79: EOL
                        pass 
                        EOL19 = self.match(self.input, EOL, self.FOLLOW_EOL_in_for_stmt311)
                        EOL19_tree = self._adaptor.createWithPayload(EOL19)
                        self._adaptor.addChild(root_0, EOL19_tree)




                    else:
                        break #loop4




                retval.stop = self.input.LT(-1)


                retval.tree = self._adaptor.rulePostProcessing(root_0)
                self._adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop)



            except RecognitionException, re:
                self.reportError(re)
                self.recover(self.input, re)
                retval.tree = self._adaptor.errorNode(self.input, retval.start, self.input.LT(-1), re)

        finally:
            pass
        return retval

    # $ANTLR end "for_stmt"


    class if_stmt_return(ParserRuleReturnScope):
        def __init__(self):
            super(PythonParser.if_stmt_return, self).__init__()

            self.tree = None





    # $ANTLR start "if_stmt"
    # C:\\Users\\Jangedoo\\Documents\\eclipseworkspace\\XperimentLang\\src\\Python.g:70:1: if_stmt : 'if' expr ':' EOL INDENT block DEDENT ( EOL )* ( 'elif' expr ':' EOL INDENT block DEDENT ( EOL )* )* ( 'else' ':' EOL INDENT block DEDENT ( EOL )* )? ;
    def if_stmt(self, ):
        retval = self.if_stmt_return()
        retval.start = self.input.LT(1)


        root_0 = None

        string_literal20 = None
        char_literal22 = None
        EOL23 = None
        INDENT24 = None
        DEDENT26 = None
        EOL27 = None
        string_literal28 = None
        char_literal30 = None
        EOL31 = None
        INDENT32 = None
        DEDENT34 = None
        EOL35 = None
        string_literal36 = None
        char_literal37 = None
        EOL38 = None
        INDENT39 = None
        DEDENT41 = None
        EOL42 = None
        expr21 = None
        block25 = None
        expr29 = None
        block33 = None
        block40 = None

        string_literal20_tree = None
        char_literal22_tree = None
        EOL23_tree = None
        INDENT24_tree = None
        DEDENT26_tree = None
        EOL27_tree = None
        string_literal28_tree = None
        char_literal30_tree = None
        EOL31_tree = None
        INDENT32_tree = None
        DEDENT34_tree = None
        EOL35_tree = None
        string_literal36_tree = None
        char_literal37_tree = None
        EOL38_tree = None
        INDENT39_tree = None
        DEDENT41_tree = None
        EOL42_tree = None

        try:
            try:
                # C:\\Users\\Jangedoo\\Documents\\eclipseworkspace\\XperimentLang\\src\\Python.g:70:9: ( 'if' expr ':' EOL INDENT block DEDENT ( EOL )* ( 'elif' expr ':' EOL INDENT block DEDENT ( EOL )* )* ( 'else' ':' EOL INDENT block DEDENT ( EOL )* )? )
                # C:\\Users\\Jangedoo\\Documents\\eclipseworkspace\\XperimentLang\\src\\Python.g:70:11: 'if' expr ':' EOL INDENT block DEDENT ( EOL )* ( 'elif' expr ':' EOL INDENT block DEDENT ( EOL )* )* ( 'else' ':' EOL INDENT block DEDENT ( EOL )* )?
                pass 
                root_0 = self._adaptor.nil()


                string_literal20 = self.match(self.input, 36, self.FOLLOW_36_in_if_stmt324)
                string_literal20_tree = self._adaptor.createWithPayload(string_literal20)
                self._adaptor.addChild(root_0, string_literal20_tree)



                self._state.following.append(self.FOLLOW_expr_in_if_stmt326)
                expr21 = self.expr()

                self._state.following.pop()
                self._adaptor.addChild(root_0, expr21.tree)


                char_literal22 = self.match(self.input, 24, self.FOLLOW_24_in_if_stmt328)
                char_literal22_tree = self._adaptor.createWithPayload(char_literal22)
                self._adaptor.addChild(root_0, char_literal22_tree)



                EOL23 = self.match(self.input, EOL, self.FOLLOW_EOL_in_if_stmt330)
                EOL23_tree = self._adaptor.createWithPayload(EOL23)
                self._adaptor.addChild(root_0, EOL23_tree)



                INDENT24 = self.match(self.input, INDENT, self.FOLLOW_INDENT_in_if_stmt332)
                INDENT24_tree = self._adaptor.createWithPayload(INDENT24)
                self._adaptor.addChild(root_0, INDENT24_tree)



                self._state.following.append(self.FOLLOW_block_in_if_stmt334)
                block25 = self.block()

                self._state.following.pop()
                self._adaptor.addChild(root_0, block25.tree)


                DEDENT26 = self.match(self.input, DEDENT, self.FOLLOW_DEDENT_in_if_stmt336)
                DEDENT26_tree = self._adaptor.createWithPayload(DEDENT26)
                self._adaptor.addChild(root_0, DEDENT26_tree)



                # C:\\Users\\Jangedoo\\Documents\\eclipseworkspace\\XperimentLang\\src\\Python.g:70:49: ( EOL )*
                while True: #loop5
                    alt5 = 2
                    LA5_0 = self.input.LA(1)

                    if (LA5_0 == EOL) :
                        alt5 = 1


                    if alt5 == 1:
                        # C:\\Users\\Jangedoo\\Documents\\eclipseworkspace\\XperimentLang\\src\\Python.g:70:49: EOL
                        pass 
                        EOL27 = self.match(self.input, EOL, self.FOLLOW_EOL_in_if_stmt338)
                        EOL27_tree = self._adaptor.createWithPayload(EOL27)
                        self._adaptor.addChild(root_0, EOL27_tree)




                    else:
                        break #loop5


                # C:\\Users\\Jangedoo\\Documents\\eclipseworkspace\\XperimentLang\\src\\Python.g:70:54: ( 'elif' expr ':' EOL INDENT block DEDENT ( EOL )* )*
                while True: #loop7
                    alt7 = 2
                    LA7_0 = self.input.LA(1)

                    if (LA7_0 == 33) :
                        alt7 = 1


                    if alt7 == 1:
                        # C:\\Users\\Jangedoo\\Documents\\eclipseworkspace\\XperimentLang\\src\\Python.g:70:55: 'elif' expr ':' EOL INDENT block DEDENT ( EOL )*
                        pass 
                        string_literal28 = self.match(self.input, 33, self.FOLLOW_33_in_if_stmt342)
                        string_literal28_tree = self._adaptor.createWithPayload(string_literal28)
                        self._adaptor.addChild(root_0, string_literal28_tree)



                        self._state.following.append(self.FOLLOW_expr_in_if_stmt344)
                        expr29 = self.expr()

                        self._state.following.pop()
                        self._adaptor.addChild(root_0, expr29.tree)


                        char_literal30 = self.match(self.input, 24, self.FOLLOW_24_in_if_stmt346)
                        char_literal30_tree = self._adaptor.createWithPayload(char_literal30)
                        self._adaptor.addChild(root_0, char_literal30_tree)



                        EOL31 = self.match(self.input, EOL, self.FOLLOW_EOL_in_if_stmt347)
                        EOL31_tree = self._adaptor.createWithPayload(EOL31)
                        self._adaptor.addChild(root_0, EOL31_tree)



                        INDENT32 = self.match(self.input, INDENT, self.FOLLOW_INDENT_in_if_stmt349)
                        INDENT32_tree = self._adaptor.createWithPayload(INDENT32)
                        self._adaptor.addChild(root_0, INDENT32_tree)



                        self._state.following.append(self.FOLLOW_block_in_if_stmt351)
                        block33 = self.block()

                        self._state.following.pop()
                        self._adaptor.addChild(root_0, block33.tree)


                        DEDENT34 = self.match(self.input, DEDENT, self.FOLLOW_DEDENT_in_if_stmt353)
                        DEDENT34_tree = self._adaptor.createWithPayload(DEDENT34)
                        self._adaptor.addChild(root_0, DEDENT34_tree)



                        # C:\\Users\\Jangedoo\\Documents\\eclipseworkspace\\XperimentLang\\src\\Python.g:70:94: ( EOL )*
                        while True: #loop6
                            alt6 = 2
                            LA6_0 = self.input.LA(1)

                            if (LA6_0 == EOL) :
                                alt6 = 1


                            if alt6 == 1:
                                # C:\\Users\\Jangedoo\\Documents\\eclipseworkspace\\XperimentLang\\src\\Python.g:70:94: EOL
                                pass 
                                EOL35 = self.match(self.input, EOL, self.FOLLOW_EOL_in_if_stmt355)
                                EOL35_tree = self._adaptor.createWithPayload(EOL35)
                                self._adaptor.addChild(root_0, EOL35_tree)




                            else:
                                break #loop6



                    else:
                        break #loop7


                # C:\\Users\\Jangedoo\\Documents\\eclipseworkspace\\XperimentLang\\src\\Python.g:70:101: ( 'else' ':' EOL INDENT block DEDENT ( EOL )* )?
                alt9 = 2
                LA9_0 = self.input.LA(1)

                if (LA9_0 == 34) :
                    alt9 = 1
                if alt9 == 1:
                    # C:\\Users\\Jangedoo\\Documents\\eclipseworkspace\\XperimentLang\\src\\Python.g:70:102: 'else' ':' EOL INDENT block DEDENT ( EOL )*
                    pass 
                    string_literal36 = self.match(self.input, 34, self.FOLLOW_34_in_if_stmt361)
                    string_literal36_tree = self._adaptor.createWithPayload(string_literal36)
                    self._adaptor.addChild(root_0, string_literal36_tree)



                    char_literal37 = self.match(self.input, 24, self.FOLLOW_24_in_if_stmt363)
                    char_literal37_tree = self._adaptor.createWithPayload(char_literal37)
                    self._adaptor.addChild(root_0, char_literal37_tree)



                    EOL38 = self.match(self.input, EOL, self.FOLLOW_EOL_in_if_stmt365)
                    EOL38_tree = self._adaptor.createWithPayload(EOL38)
                    self._adaptor.addChild(root_0, EOL38_tree)



                    INDENT39 = self.match(self.input, INDENT, self.FOLLOW_INDENT_in_if_stmt367)
                    INDENT39_tree = self._adaptor.createWithPayload(INDENT39)
                    self._adaptor.addChild(root_0, INDENT39_tree)



                    self._state.following.append(self.FOLLOW_block_in_if_stmt369)
                    block40 = self.block()

                    self._state.following.pop()
                    self._adaptor.addChild(root_0, block40.tree)


                    DEDENT41 = self.match(self.input, DEDENT, self.FOLLOW_DEDENT_in_if_stmt371)
                    DEDENT41_tree = self._adaptor.createWithPayload(DEDENT41)
                    self._adaptor.addChild(root_0, DEDENT41_tree)



                    # C:\\Users\\Jangedoo\\Documents\\eclipseworkspace\\XperimentLang\\src\\Python.g:70:137: ( EOL )*
                    while True: #loop8
                        alt8 = 2
                        LA8_0 = self.input.LA(1)

                        if (LA8_0 == EOL) :
                            alt8 = 1


                        if alt8 == 1:
                            # C:\\Users\\Jangedoo\\Documents\\eclipseworkspace\\XperimentLang\\src\\Python.g:70:137: EOL
                            pass 
                            EOL42 = self.match(self.input, EOL, self.FOLLOW_EOL_in_if_stmt373)
                            EOL42_tree = self._adaptor.createWithPayload(EOL42)
                            self._adaptor.addChild(root_0, EOL42_tree)




                        else:
                            break #loop8







                retval.stop = self.input.LT(-1)


                retval.tree = self._adaptor.rulePostProcessing(root_0)
                self._adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop)



            except RecognitionException, re:
                self.reportError(re)
                self.recover(self.input, re)
                retval.tree = self._adaptor.errorNode(self.input, retval.start, self.input.LT(-1), re)

        finally:
            pass
        return retval

    # $ANTLR end "if_stmt"


    class while_stmt_return(ParserRuleReturnScope):
        def __init__(self):
            super(PythonParser.while_stmt_return, self).__init__()

            self.tree = None





    # $ANTLR start "while_stmt"
    # C:\\Users\\Jangedoo\\Documents\\eclipseworkspace\\XperimentLang\\src\\Python.g:73:1: while_stmt : 'while' '(' condition= expr ')' ':' EOL INDENT actions= block DEDENT ( EOL )* -> ^( 'while' expr block ) ;
    def while_stmt(self, ):
        retval = self.while_stmt_return()
        retval.start = self.input.LT(1)


        root_0 = None

        string_literal43 = None
        char_literal44 = None
        char_literal45 = None
        char_literal46 = None
        EOL47 = None
        INDENT48 = None
        DEDENT49 = None
        EOL50 = None
        condition = None
        actions = None

        string_literal43_tree = None
        char_literal44_tree = None
        char_literal45_tree = None
        char_literal46_tree = None
        EOL47_tree = None
        INDENT48_tree = None
        DEDENT49_tree = None
        EOL50_tree = None
        stream_EOL = RewriteRuleTokenStream(self._adaptor, "token EOL")
        stream_DEDENT = RewriteRuleTokenStream(self._adaptor, "token DEDENT")
        stream_19 = RewriteRuleTokenStream(self._adaptor, "token 19")
        stream_18 = RewriteRuleTokenStream(self._adaptor, "token 18")
        stream_24 = RewriteRuleTokenStream(self._adaptor, "token 24")
        stream_39 = RewriteRuleTokenStream(self._adaptor, "token 39")
        stream_INDENT = RewriteRuleTokenStream(self._adaptor, "token INDENT")
        stream_block = RewriteRuleSubtreeStream(self._adaptor, "rule block")
        stream_expr = RewriteRuleSubtreeStream(self._adaptor, "rule expr")
        try:
            try:
                # C:\\Users\\Jangedoo\\Documents\\eclipseworkspace\\XperimentLang\\src\\Python.g:73:11: ( 'while' '(' condition= expr ')' ':' EOL INDENT actions= block DEDENT ( EOL )* -> ^( 'while' expr block ) )
                # C:\\Users\\Jangedoo\\Documents\\eclipseworkspace\\XperimentLang\\src\\Python.g:73:13: 'while' '(' condition= expr ')' ':' EOL INDENT actions= block DEDENT ( EOL )*
                pass 
                string_literal43 = self.match(self.input, 39, self.FOLLOW_39_in_while_stmt386) 
                stream_39.add(string_literal43)


                char_literal44 = self.match(self.input, 18, self.FOLLOW_18_in_while_stmt388) 
                stream_18.add(char_literal44)


                self._state.following.append(self.FOLLOW_expr_in_while_stmt392)
                condition = self.expr()

                self._state.following.pop()
                stream_expr.add(condition.tree)


                char_literal45 = self.match(self.input, 19, self.FOLLOW_19_in_while_stmt394) 
                stream_19.add(char_literal45)

